---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: ??????
  Balances:
    - Several small balances.
    - Balanced fuels.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: ??????
  Bug fixes:
    - Compatibility with the recent update.
  Balances:
    - Modified stacks.
    - Balanced fuels.
---------------------------------------------------------------------------------------------------
Version: 1.2.9
Date: ??????
  Bug fixes:
    - Compatibility with other mods
  Balances:
    - map grid fix.
---------------------------------------------------------------------------------------------------
Version: 1.2.8
Date: ??????
  Bug fixes:
    - Fixed coal-to-coke tech.
  Balances:
    - Reduced all building crafting time.
---------------------------------------------------------------------------------------------------
Version: 1.2.7
Date: ??????
  Bug fixes:
    - Fixed polution.
  Balances:
    - Moved coal-to-coke recipe to coke processing mk01.
---------------------------------------------------------------------------------------------------
Version: 1.2.6
Date: ??????
  Bug fixes:
    - Fixed vacuum.
---------------------------------------------------------------------------------------------------
Version: 1.2.5
Date: ??????
  Bug fixes:
    - Fixed nichrome.
---------------------------------------------------------------------------------------------------
Version: 1.2.5
Date: ??????
  Balances:
    - Added nichrome.
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: ??????
  Balances:
    - Mega drill head balance.
---------------------------------------------------------------------------------------------------
Version: 1.2.2
Date: ??????
  Balances:
    - Few balances in Nickel, Tin, Aluminium and Gladd chains.